# waii-rust

./: .gitignore  Cargo.toml  Dioxus.toml
.firebase/: hosting.ZGlzdA.cache
src/: main.rs
src/components/: mod.rs
src/components/pages/: blogs.rs
